--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@
       </div>
    
     <div class="adresse">
-        <ul>
+        <ul class="liste">
             <li>chbasmaa@gmail.com</li>
             <li>07.00.00.00.00</li>
            <li> 29 rue de l'Alc</li>
