--- a/presentation.html
+++ b/presentation.html
@@ -15,13 +15,12 @@
     
 
     <div class="Présentation"> 
-    <h1>Présentation</h1>
+       <h1>Présentation</h1>
    </div>
-
     <div class="jemappelle"> 
-
-        <p>Je m’appelle Asma Chebaiki, j’ai 24 ans et je vis à Lille. Suite à mes études en psychologie j’ai effectuée un stage en Community Management ce qui m’a conduis à réaliser une formation de développeur web Asma Chebaiki,</p>
-    
+      <hr class="lignedessus">
+        <p>Je  m’appelle  Asma  Chebaiki,  j’ai 24 ans et je vis à Lille. Suite à mes études en psychologie j’ai effectuée un stage en Community Management ce qui m’a conduis à réaliser une formation de développeur web Asma Chebaiki,</p>
+        <hr class="lignedessous">
       </div>
  </div> 
 
