--- a/competences.html
+++ b/competences.html
@@ -14,10 +14,10 @@
      <div class="titrelogo">
 
        <h1 class="titrecomp">COMPÉTENCES</h1>
-       <div> <img src="img/new logo.png" alt="logo" class="logo3">
-
+       <div class="logo5">
+         <div> <img src="img/new logo.png" alt="logo" class="logo55">
+         </div>
        </div>
-       
     </div>
 
 <div class="divfleur">
