--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
 
         <div class="logotitre">
               <div class="merci">
-                  <h1>Merci</h1>
+                  <h1>MERCI</h1>
              </div>
     
              <div class="logo5">
