--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="img/new logo.png" alt="logo" class="logo55">
           </div>
            
-               <ul>
+               <ul class="UL">
                <a href="presentation.html"><li> Présentation</li></a>
                 <a href="competences.html"><li>Compétences</li></a>
                 <a href="DWWM.html"><li> DWWM</li></a>
