--- a/presentation.html
+++ b/presentation.html
@@ -10,18 +10,21 @@
 <body >
 
   <header class="fond">
-    <div class="rectangle">
 
-    
+    <div class="logo5">
+      <img src="img/new logo.png" alt="logo" class="logo55">
+   </div>
+    <div class="rectangle"> 
 
     <div class="Présentation"> 
        <h1>Présentation</h1>
    </div>
+
     <div class="jemappelle"> 
       <hr class="lignedessus">
-        <p>Je  m’appelle  Asma  Chebaiki,  j’ai 24 ans et je vis à Lille. Suite à mes études en psychologie j’ai effectuée un stage en Community Management ce qui m’a conduis à réaliser une formation de développeur web Asma Chebaiki,</p>
-        <hr class="lignedessous">
-      </div>
+          <p>Je  m’appelle  Asma  Chebaiki,  j’ai 24 ans et je vis à Lille. Suite à mes études en psychologie j’ai effectuée un stage en Community Management ce qui m’a conduis à réaliser une formation de développeur web Asma Chebaiki,</p>
+      <hr class="lignedessous">
+    </div>
  </div> 
 
   </header>
